--- a/frontend/src/css/global/theme.css
+++ b/frontend/src/css/global/theme.css
@@ -13,10 +13,20 @@ h6 {
     color: var(--heading-color);
     transition: color 0.3s ease;
 }
+h2{
+    color: var(--heading-color);
+    transition: color 0.3s ease;
+    text-align: center;
+}
+h3{
+    margin-left: 10%;
+    
+}
 
 section {
     background-color: var(--section-bg);
     transition: background-color 0.3s ease;
+    margin-top: 60px;
 }
 
 /* Accessibility: Visible Focus Outline */
